<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/LLOpenInstagram"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@drawable/rectangle_main_top_title"
                    android:paddingTop="30dp">

                    <ImageView
                        android:id="@+id/imBack"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_twotone_cancel_24"
                        />

                    <ImageView
                        android:id="@+id/TVTitle"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/insta_logo" />

                    <TextView
                        android:id="@+id/tvAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_toEndOf="@id/TVTitle"
                        android:text="@string/insta_app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/home_app_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvAppName"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/TVTitle"
                        android:text="@string/vidnstory"
                        android:textColor="@color/white"
                        android:textSize="@dimen/home_tag_line"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RLLoginInstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LLOpenInstagram"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tvLoginInstagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="10dp"
                        android:text="@string/download_from_private_account"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                    <Switch
                        android:id="@+id/SwitchLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tvLoginInstagram"
                        android:clickable="false"
                        android:text=""
                        android:theme="@style/SCBSwitch" />

                </RelativeLayout>



                <LinearLayout
                    android:id="@+id/lnr_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RLLoginInstagram"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:id="@+id/RLEdittextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:elevation="5dp">

                        <EditText
                            android:id="@+id/et_text"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:background="@drawable/et_back"
                            android:hint="@string/paste_link"
                            android:padding="15dp"
                            android:layout_toStartOf="@id/RLDownloadLayout"
                            android:layout_alignParentStart="true"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="15sp" />


                        <LinearLayout
                            android:id="@+id/RLDownloadLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:weightSum="1">

                            <ImageView
                                android:id="@+id/login_btn1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:background="@drawable/et_back"
                                android:backgroundTint="@color/colorPrimary"
                                android:src="@drawable/ic_baseline_arrow_downward_24"
                                android:gravity="center"
                                android:padding="14dp" />

                            <!--<TextView
                                android:id="@+id/tv_paste"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:background="@drawable/et_back"
                                android:backgroundTint="@color/colorPrimary"
                                android:gravity="center"
                                android:padding="14dp"
                                android:text="@string/paste"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="@dimen/paste_txt_size" />-->

                        </LinearLayout>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tvViewStories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_stories"
                            android:textSize="13dp"
                            android:padding="10dp"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:padding="8dp"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:background="@drawable/selected_tab"
                            android:backgroundTint="@color/colorPrimary"
                            android:id="@+id/tvLogin"
                            android:textColor="@color/white"
                            android:layout_below="@+id/RLM"
                            android:layout_marginBottom="10dp"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/RVUserList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:nestedScrollingEnabled="false"
                        tools:listitem="@layout/item_user_list" />
                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pr_loading_bar"
                        android:layout_marginTop="5dp"
                        android:indeterminate="true"
                        android:visibility="gone"
                        android:indeterminateTint="@color/colorPrimary"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/RVStories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:nestedScrollingEnabled="false"
                        tools:listitem="@layout/items_whatsapp_view" />

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_ad"/>


    </RelativeLayout>
</layout>
