<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/LLOpenApp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/rectangle_main_top_title"
                    android:backgroundTint="@color/colorPrimary"
                    android:paddingTop="30dp">

                    <ImageView
                        android:id="@+id/imBack"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_twotone_cancel_24" />

                    <ImageView
                        android:id="@+id/imAppIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/chingari" />

                    <TextView
                        android:id="@+id/tvAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_toEndOf="@id/imAppIcon"
                        android:text="@string/insta_app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/home_app_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvAppName"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/imAppIcon"
                        android:text="@string/vidnstory"
                        android:textColor="@color/black"
                        android:textSize="@dimen/home_tag_line"
                        android:textStyle="bold" />
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/lnr_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LLOpenApp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <RelativeLayout
                        android:id="@+id/RLEdittextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp">

                        <EditText
                            android:id="@+id/et_text"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@id/RLDownloadLayout"
                            android:background="@drawable/et_back"
                            android:hint="@string/paste_link"
                            android:padding="15dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="15sp" />


                        <LinearLayout
                            android:id="@+id/RLDownloadLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:weightSum="1">

                            <ImageView
                                android:id="@+id/login_btn1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:background="@drawable/et_back"
                                android:backgroundTint="@color/colorPrimary"
                                android:gravity="center"
                                android:padding="14dp"
                                android:src="@drawable/ic_baseline_arrow_downward_24" />

                            <!--<TextView
                                android:id="@+id/tv_paste"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:background="@drawable/et_back"
                                android:backgroundTint="@color/colorPrimary"
                                android:gravity="center"
                                android:padding="14dp"
                                android:text="@string/paste"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="@dimen/paste_txt_size" />-->

                        </LinearLayout>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.google.android.ads.nativetemplates.TemplateView
                            android:id="@+id/my_template"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/rectangle_white"
                            android:visibility="gone"
                            app:gnt_template_type="@layout/gnt_small_template_view" />


                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_ad"/>


    </RelativeLayout>
</layout>
